[package]
name = "dom"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wurst = { path = "../.." }
wasm-bindgen = { git = 'https://github.com/rustwasm/wasm-bindgen.git' }
web-sys = { git = 'https://github.com/rustwasm/wasm-bindgen.git' }
