[package]
name = "form-example"
version = "0.1.0"
authors = ["Jonathan Kingston <jonathan@jooped.co.uk>"]

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = false
lto = true
opt-level = 'z'

[dependencies]
wurst = { path = "../.." }
wasm-bindgen = { version = "0.2.23" }
web-sys = { version = "0.3.0" }
js-sys = { version = "0.3.0" }
